syntax = "proto3";

service Auth {
    rpc Authenticate (AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    string token = 1;
}

message AuthResponse {
    string username = 1;
}